--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 		<meta name="keywords" content="TEDxYouth,JPIS,Jaipur,TEDx,Ted Talks">
 		<title>TEDxYouth@JPIS</title>
 		<meta name="author" content="JPIS">
+		<link rel="icon" href="Assets/favicon.png" type="image/png">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-		<link rel="stylesheet" href="assets/css/style.css">
-		<script src="assets/js/jquery-3.3.1.js"></script>
+		<link rel="stylesheet" href="Assets/css/style.css">
+		<script src="Assets/js/jquery-3.3.1.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="assets/js/images.js"></script>
+		<script src="Assets/js/images.js"></script>
 	</head>
 
 	<body>
@@ -39,10 +40,10 @@
           					<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
         					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850">TEDxYouth@JPIS '17</a>
+          					<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
         					</li>
                   <li class="nav-item ">
-                    <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938">TEDxYouth@JPIS '16</a>
+                    <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
                   </li>
       				</ul>
 
@@ -73,14 +74,14 @@
             <div class="smalltext s">Seconds</div>
           </div>
         </div>
-        <script src="assets/js/timer.js"></script>
+        <script src="Assets/js/timer.js"></script>
 			</div>
   	</div>
 
     <!-- Scripts -->
-    <script src="assets/js/typer.js"></script>
-    <script type="text/javascript" src="assets/js/particles.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script src="Assets/js/typer.js"></script>
+    <script type="text/javascript" src="Assets/js/particles.js"></script>
+    <script type="text/javascript" src="Assets/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
