--- a/team.html
+++ b/team.html
@@ -3,19 +3,19 @@
 
 <head>
 	<title>TEDxYouth@JPIS 2018 Team Page</title>
-	<link rel="stylesheet" href="assets/css/team.css" type="text/css">
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<link rel="icon" href="Assets/favicon.png" type="image/png">
+	<link rel="stylesheet" href="Assets/css/team.css" type="text/css">
+	<link rel="stylesheet" href="Assets/css/style.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="Assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<script src="assets/js/jquery-3.3.1.js"></script>
+	<script src="Assets/js/jquery-3.3.1.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="assets/js/images.js"></script>
+	<script src="Assets/js/images.js"></script>
 </head>
 
 <body id="override" style="background-color:black;">
@@ -39,10 +39,10 @@
 								<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
 							</li>
 							<li class="nav-item ">
-								<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850">TEDxYouth@JPIS '17</a>
+								<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
 							</li>
 							<li class="nav-item ">
-								<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938">TEDxYouth@JPIS '16</a>
+								<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
 							</li>
 					</ul>
 
@@ -55,8 +55,8 @@
 			<div class="row">
 				<div class="team col col-md-6 col-lg-4 col-sm-12">
 					<div class="teamimg">
-						<img class="bottom" src="assets/images/placeholder.jpg">
-						<img class="top" src="assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/placeholder.jpg">
+						<img class="top" src="Assets/images/placeholder_shatter.jpg">
 					</div>
 					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
 					<p class="center-align">Title</p>
@@ -64,8 +64,8 @@
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
 					<div class="teamimg">
-						<img class="bottom" src="assets/images/placeholder.jpg">
-						<img class="top" src="assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/placeholder.jpg">
+						<img class="top" src="Assets/images/placeholder_shatter.jpg">
 					</div>
 					<h4>Name</h4>
 					<p class="center-align caps">Title</p>
@@ -73,8 +73,8 @@
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">
 					<div class="teamimg">
-						<img class="bottom" src="assets/images/placeholder.jpg">
-						<img class="top" src="assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/placeholder.jpg">
+						<img class="top" src="Assets/images/placeholder_shatter.jpg">
 					</div>
 					<h4>Name</h4>
 					<p class="center-align caps">Title</p>
@@ -85,8 +85,8 @@
 			<div class="row">
 				<div class="team col col-md-6 col-lg-4 col-sm-12">
 					<div class="teamimg">
-						<img class="bottom" src="assets/images/placeholder.jpg">
-						<img class="top" src="assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/placeholder.jpg">
+						<img class="top" src="Assets/images/placeholder_shatter.jpg">
 					</div>
 					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
 					<p class="center-align caps">Title</p>
@@ -94,8 +94,8 @@
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
 					<div class="teamimg">
-						<img class="bottom" src="assets/images/placeholder.jpg">
-						<img class="top" src="assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/placeholder.jpg">
+						<img class="top" src="Assets/images/placeholder_shatter.jpg">
 					</div>
 					<h4>Name</h4>
 					<p class="center-align caps">Title</p>
@@ -103,8 +103,8 @@
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">
 					<div class="teamimg">
-						<img class="bottom" src="assets/images/placeholder.jpg">
-						<img class="top" src="assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/placeholder.jpg">
+						<img class="top" src="Assets/images/placeholder_shatter.jpg">
 					</div>
 					<h4>Name</h4>
 					<p class="center-align caps">Title</p>
