--- a/team.html
+++ b/team.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="Assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="Assets/js/jquery-3.3.1.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -61,6 +61,13 @@
 					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
 					<p class="center-align">Title</p>
 					<p class="center-justified">Bio</p>
+					<div class="social-btns">
+						<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+						<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+						<a href="#" class="btn github"><i class="fa fa-github"></i></a>
+						<a href="#" class="btn twitter"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="btn skype"><i class="fa fa-skype"></i></a>
+					</div>
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
 					<div class="teamimg">
